# ITKHalideFilters

./: CMakeLists.txt  README.rst  itk-module.cmake  pyproject.toml
.github/workflows/: build-test-package.yml
examples/: BandwidthBenchmark.cxx  Benchmark.ipynb  CMakeLists.txt  ResolutionBenchmark.cxx  SampleHalidePipeline.cxx  SampleHalidePipeline.py  SigmaBenchmark.cxx  bandwidth-benchmark.csv  benchmark.csv  plots.ipynb  resolution-benchmark.csv  sigma-benchmark.csv
include/: itkHalideCastImageFilter.h  itkHalideCastImageFilter.hxx  itkHalideDiscreteGaussianImageFilter.h  itkHalideDiscreteGaussianImageFilter.hxx  itkHalideGPUDiscreteGaussianImageFilter.h  itkHalideGPUDiscreteGaussianImageFilter.hxx  itkMinimalStandardRandomVariateGenerator.h
src/: CMakeLists.txt  generators.cpp  itkMinimalStandardRandomVariateGenerator.cxx
test/: CMakeLists.txt  itkHalideCastImageFilterTest.cxx  itkHalideDiscreteGaussianImageFilterTest.cxx  itkHalideGPUDiscreteGaussianImageFilterTest.cxx
test/CTChest/: Input.mha.sha512  ReferenceOutput.mha.sha512
wrapping/: CMakeLists.txt  itkHalideDiscreteGaussianImageFilter.wrap
